fix: contrast card tags text

--- a/styles/components/_modal.scss
+++ b/styles/components/_modal.scss
@@ -38,7 +38,10 @@
         border-top: 1px solid var(--border);
 
         .technology {
-            color: var(--blue);
+            display: flex;
+            align-items: center;
+            gap: 0 0.5rem;
+            color: var(--tags);
             padding-bottom: 1rem;
             font-size: 0.9rem;
         }
@@ -77,7 +80,7 @@
         .modal_button {
             display: flex;
             justify-content: flex-end;
-            color: var(--background);
+            color: var(--text-button);
             font-size: 0.98rem;
         }
     }
