--- a/styles/pages/_realisations.scss
+++ b/styles/pages/_realisations.scss
@@ -79,7 +79,10 @@
                 border-top: 1px solid var(--border);
 
                 .technology {
-                    color: var(--blue);
+                    display: flex;
+                    align-items: center;
+                    gap: 0 0.5rem;
+                    color: var(--tags);
                     padding-bottom: 1rem;
                     font-size: 0.9rem;
                 }
@@ -89,7 +92,7 @@
                     justify-content: flex-end;
                     justify-self: flex-end;
                     margin-top: 2rem;
-                    color: var(--background);
+                    color: var(--text-button);
                 }
             }
         }
